--- a/src/components/tech-stack-card.astro
+++ b/src/components/tech-stack-card.astro
@@ -1,7 +1,7 @@
 ---
 import type { HTMLAttributes } from "astro/types";
+import { Icon } from "astro-icon/components";
 import type { InfoData } from "@/lib/data-loaders/info";
-import { Icon } from "../icon";
 
 type TechStack = InfoData["tech_stack"][string];
 
