add project card in /projects page

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,12 +1,25 @@
 ---
+import ProjectCard from "@/components/project-card.astro";
 import BaseLayout from "@/layouts/base-layout.astro";
+import { loadProjectsData } from "@/lib/data-loaders/projects";
+
+const { projects } = await loadProjectsData();
 ---
 
 <BaseLayout
   title="Projects - ARV"
   description="See all the project created by Anshul Raj Verma"
 >
-  <div class="mx-auto md:max-w-2/3 w-10/12 mt-5">
-    <h1 class="font-bold text-3xl text-center">Projects</h1>
+  <div class="mx-auto md:max-w-5/6 w-10/12">
+    <h1 class="font-bold text-3xl text-center mt-8">Projects</h1>
+    <section class="py-10">
+      <div class="container mx-auto">
+        <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
+          {projects.map((project) => (
+                <ProjectCard project={project} />
+              ))}
+        </div>
+      </div>
+    </section>
   </div>
 </BaseLayout>
