--- a/src/pages/blog/[post].astro
+++ b/src/pages/blog/[post].astro
@@ -2,6 +2,7 @@
 import { type CollectionEntry, getCollection, render } from "astro:content";
 import type { GetStaticPaths } from "astro";
 import BlogPostCard from "@/components/blog-post-card.astro";
+import Prose from "@/components/starwind/prose/Prose.astro";
 import BaseLayout from "@/layouts/base-layout.astro";
 
 interface Props {
@@ -28,8 +29,10 @@ const { Content } = await render(post);
     class="flex flex-col flex-1 mx-auto md:max-w-3/5 items-center justify-center px-4 py-8"
   >
     <BlogPostCard frontmatter={post.data} />
-    <article class="prose mt-10 w-full md:min-w-10/12">
-      <Content />
+    <article class="mt-10 w-full md:max-w-11/12">
+      <Prose>
+        <Content />
+      </Prose>
     </article>
   </div>
 </BaseLayout>
