update index /blog with starwind components

--- a/src/components/blog-post-card.astro
+++ b/src/components/blog-post-card.astro
@@ -2,6 +2,14 @@
 import type { InferEntrySchema } from "astro:content";
 import type { HTMLAttributes } from "astro/types";
 import { Icon } from "astro-icon/components";
+import Button from "./starwind/button";
+import {
+  ItemContent,
+  ItemDescription,
+  ItemMedia,
+  ItemTitle,
+} from "./starwind/item";
+import Item from "./starwind/item/Item.astro";
 
 interface Props extends HTMLAttributes<"section"> {
   frontmatter: InferEntrySchema<"blog">;
@@ -10,14 +18,16 @@ interface Props extends HTMLAttributes<"section"> {
 const { frontmatter, class: className, ...props } = Astro.props as Props;
 ---
 
-<section
-  class:list={["bg-fd-accent/30 flex flex-col gap-4 w-full px-4 py-6 rounded-xl border md:px-6", className]}
+<Item
+  as="section"
+  variant="muted"
+  class:list={["flex flex-col items-start w-full gap-2 border-muted", className]}
   {...props}
 >
-  <div class="flex items-start justify-between">
-    <div class="flex flex-col gap-1">
-      <p class="font-bold text-3xl">{frontmatter.title}</p>
-      <p class="flex gap-3 text-xs text-fd-muted-foreground">
+  <div class="flex items-start justify-between w-full">
+    <ItemContent class="flex flex-col gap-1">
+      <ItemTitle class="font-bold text-3xl">{frontmatter.title}</ItemTitle>
+      <p class="flex gap-3 text-muted-foreground text-xs">
         <span class="flex gap-0.5">
           <Icon name="lucide:calendar" size={15} />
           {frontmatter.date.toLocaleDateString("en-IN", {
@@ -31,16 +41,17 @@ const { frontmatter, class: className, ...props } = Astro.props as Props;
           {frontmatter.author}
         </span>
       </p>
-    </div>
-    <Icon name={frontmatter.icon} size={60} />
+    </ItemContent>
+    <ItemMedia>
+      <Icon name={frontmatter.icon} size={60} />
+    </ItemMedia>
   </div>
 
-  <p>{frontmatter.description}</p>
+  <ItemDescription>
+    <p>{frontmatter.description}</p>
+  </ItemDescription>
 
-  <a
-    href="/blog"
-    class="flex items-center gap-0.5 w-fit text-fd-muted-foreground border-b-fd-muted-foreground hover:border-b-fd-foreground hover:text-fd-foreground transition-colors"
-  >
+  <Button variant="ghost" size="sm" href="/blog">
     <Icon name="lucide:arrow-left" size={20} /> Back
-  </a>
-</section>
+  </Button>
+</Item>
