--- a/src/components/blog-list-card.astro
+++ b/src/components/blog-list-card.astro
@@ -1,6 +1,13 @@
 ---
 import type { HTMLAttributes } from "astro/types";
 import { Icon } from "astro-icon/components";
+import {
+  Item,
+  ItemContent,
+  ItemDescription,
+  ItemMedia,
+  ItemTitle,
+} from "@/components/starwind/item";
 
 interface BlogData {
   title: string;
@@ -17,14 +24,18 @@ interface Props extends HTMLAttributes<"a"> {
 const { data, class: className, ...props } = Astro.props as Props;
 ---
 
-<a
-  class:list={["relative flex flex-col gap-4 rounded-xl border bg-fd-card p-4 hover:bg-fd-accent/80", className]}
+<Item
+  variant="outline"
+  as="a"
+  class:list={["flex flex-col gap-2 items-start", className]}
   {...props}
 >
-  <div class="flex justify-between">
-    <div class="flex flex-col gap-1">
-      <p class="font-bold text-2xl">{data.title}</p>
-      <p class="flex gap-3 text-xs text-fd-muted-foreground">
+  <div class="flex justify-between w-full">
+    <ItemContent class="flex flex-col gap-1">
+      <ItemTitle class="font-heading font-bold text-2xl">
+        {data.title}
+      </ItemTitle>
+      <p class="flex gap-3 text-xs text-muted-foreground">
         <span class="flex gap-0.5">
           <Icon name="lucide:calendar" size={15} />
           {data.date.toLocaleDateString("en-IN", {
@@ -38,10 +49,13 @@ const { data, class: className, ...props } = Astro.props as Props;
           {data.author}
         </span>
       </p>
-    </div>
-    <Icon name={data.icon} size={35} />
+    </ItemContent>
+    <ItemMedia>
+      <Icon name={data.icon} size={50} />
+    </ItemMedia>
   </div>
-  <p>
+
+  <ItemDescription>
     {data.description.length > 100 ? `${data.description.slice(0, 100)}...` : data.description}
-  </p>
-</a>
+  </ItemDescription>
+</Item>
