update props of base-layout.astro

--- a/src/layouts/base-layout.astro
+++ b/src/layouts/base-layout.astro
@@ -1,12 +1,12 @@
 ---
 import "@/styles/global.css";
+import type { HTMLAttributes } from "astro/types";
 import { SEO } from "astro-seo";
 import Navbar from "@/components/ui/navbar.astro";
 
-interface Props {
+interface Props extends HTMLAttributes<"body"> {
   title: string;
   description?: string;
-  className?: string;
   nav?: {
     sticky?: boolean;
   };
@@ -18,7 +18,8 @@ const {
   nav = {
     sticky: false,
   },
-  className,
+  class: className,
+  ...props
 } = Astro.props as Props;
 ---
 
@@ -45,7 +46,7 @@ const {
         }}
     />
   </head>
-  <body class:list={["relative w-full", className]}>
+  <body class:list={["relative w-full", className]} {...props}>
     <Navbar sticky={nav.sticky} />
     <slot />
   </body>
