--- a/src/components/ui/navbar.astro
+++ b/src/components/ui/navbar.astro
@@ -2,6 +2,7 @@
 // Component from https://tailkits.com/ui/free/
 import { Icon } from "astro-icon/components";
 import OmSvg from "public/favicon.svg";
+import Button from "../starwind/button";
 
 // Props
 interface Props {
@@ -37,7 +38,7 @@ const endLinks = [
 >
   <div class="max-w-7xl mx-auto px-4 xl:px-0">
     <div
-      class="flex items-center justify-between gap-x-4 rounded-2xl py-2.5 pl-5 pr-2.5 shadow-[0_2px_10px_0px_rgba(0,0,0,0.15)] lg:grid lg:grid-cols-[1fr_auto_1fr] lg:justify-stretch lg:gap-x-12 lg:rounded-[1.375rem]"
+      class="flex items-center justify-between gap-x-4 rounded-lg py-2.5 pl-5 pr-2.5 border border-foreground/10 shadow-foreground/50 shadow-xl/10 lg:grid lg:grid-cols-[1fr_auto_1fr] lg:justify-stretch lg:gap-x-12"
     >
       <!-- Home/Logo -->
       <div class="flex items-center">
@@ -46,10 +47,8 @@ const endLinks = [
           title={homeLink.title}
           class="flex items-center gap-1"
         >
-          <!-- <Image src={homeLink.src} alt={homeLink.alt} width="24" height="24" class="fill-black bg-black text-black stroke-black"/> -->
           <OmSvg
-            class="fill-black stroke-black"
-            fill="black"
+            class="fill-foreground stroke-foreground"
             height="30"
             width="30"
           />
@@ -62,10 +61,10 @@ const endLinks = [
           {middleLinks.map((link) => (
             <li>
               <a
-                class="flex rounded-2xl items-center gap-x-2 px-3 py-2 text-sm font-medium text-neutral-700 transition hover:text-black"
+                class="flex items-center gap-x-2 px-3 py-2 text-sm font-medium text-foreground"
                 href={link.href}
               >
-                <Icon name={link.icon} class="w-4 h-4" />
+                <Icon name={link.icon} />
                 {link.title}
               </a>
             </li>
@@ -77,25 +76,28 @@ const endLinks = [
       <div class="flex items-center gap-x-10 justify-self-end">
         <div class="flex items-center gap-x-2">
           {endLinks.map((link) => (
-            <a
+            <Button
               href={link.href}
               title={link.title || link.title}
-              class="hidden lg:flex items-center justify-center p-2.5 text-sm font-medium transition-all focus:shadow-[0_0px_0px_2px_rgba(15,23,42,0.25),0_2px_10px_0px_rgba(0,0,0,0.05)] shadow-[0_2px_10px_0px_rgba(0,0,0,0.05)] border border-neutral-100 bg-white text-neutral-700 hover:border-neutral-200 hover:bg-neutral-100 disabled:border-slate-900/5 disabled:bg-slate-50/30 disabled:text-slate-900/20 rounded-[0.625rem]"
+              variant="ghost"
+              size="icon"
             >
-              <Icon name={link.icon} class="w-5 h-5" />
-            </a>
+              <Icon name={link.icon}/>
+            </Button>
           ))}
 
           <!-- Mobile Menu Button -->
-          <button
+          <Button
             type="button"
             id="mobile-menu-button"
             aria-title="Open menu"
-            class="lg:hidden p-2"
+            class="lg:hidden"
             title="Open menu"
+            variant="outline"
+            size="icon"
           >
-            <Icon name="lucide:menu" class="w-6 h-6 text-slate-500" />
-          </button>
+            <Icon name="lucide:menu" />
+          </Button>
         </div>
       </div>
     </div>
@@ -108,64 +110,63 @@ const endLinks = [
     aria-hidden="true"
   >
     <div
-      class="fixed right-0 top-0 h-full w-full max-w-sm bg-white shadow-xl transform transition-transform duration-300 ease-in-out"
+      class="fixed right-0 top-0 h-full w-full max-w-sm shadow-xl transform transition-transform duration-300 ease-in-out"
     >
       <div class="flex flex-col ">
         <!-- Mobile Menu Header -->
-        <div
-          class="flex items-center justify-between p-4 border-b border-neutral-200"
-        >
+        <div class="flex items-center justify-between p-4 border-b">
           <a
             href={homeLink.href}
             title={homeLink.title}
             class="flex items-center gap-1"
           >
-            <!-- <Image src={homeLink.src} alt={homeLink.alt} width="24" height="24" class="fill-black bg-black text-black stroke-black"/> -->
             <OmSvg
-              class="fill-black stroke-black"
-              fill="black"
+              class="fill-forstroke stroke-foreground"
               height="30"
               width="30"
             />
           </a>
-          <button
+          <Button
             type="button"
             id="mobile-menu-close"
             aria-title="Close menu"
-            class="p-2 text-neutral-700"
+            variant="ghost"
+            size="icon"
           >
-            <Icon name="lucide:x" class="w-6 h-6" />
-          </button>
+            <Icon name="lucide:x" />
+          </Button>
         </div>
 
         <!-- Mobile Menu Links -->
         <nav
-          class="flex-1 overflow-y-auto p-4 bg-white rounded-bl-xl border-neutral-300 border"
+          class="flex-1 overflow-y-auto p-4 bg-background rounded-bl-xl border"
         >
           <ul class="space-y-2">
             {middleLinks.map((link) => (
               <li>
-                <a
+                <Button
                   href={link.href}
-                  class="flex items-center gap-x-3 px-4 py-3 text-base font-medium text-neutral-700 rounded-lg transition hover:bg-neutral-100"
+                  class="w-full border"
+                  variant="ghost"
                 >
-                  <Icon name={link.icon} class="w-5 h-5" />
+                  <Icon name={link.icon} />
                   {link.title}
-                </a>
+                </Button>
               </li>
             ))}
           </ul>
 
           <!-- Mobile End Links -->
-          <div class="mt-6 pt-6 border-t border-neutral-200 space-y-2">
+          <div class="mt-6 pt-6 border-t space-y-2">
             {endLinks.map((link) => (
-              <a
+              <Button
                 href={link.href}
-                class="flex items-center gap-x-3 w-full px-4 py-3 text-sm font-medium text-neutral-700 bg-neutral-100 rounded-lg transition hover:bg-neutral-200"
+                class="w-full"
+                variant="outline"
               >
-                <Icon name={link.icon} class="w-5 h-5" />
+                <Icon name={link.icon} />
                 {link.title}
-              </a>
+              </Button>
             ))}
           </div>
         </nav>
