add theme toggling

--- a/src/components/ui/navbar.astro
+++ b/src/components/ui/navbar.astro
@@ -2,6 +2,7 @@
 // Component from https://tailkits.com/ui/free/
 import { Icon } from "astro-icon/components";
 import OmSvg from "public/favicon.svg";
+import { ThemeToggle } from "@/components/starwind/theme-toggle";
 import Button from "../starwind/button";
 
 // Props
@@ -38,7 +39,7 @@ const endLinks = [
 >
   <div class="max-w-7xl mx-auto px-4 xl:px-0">
     <div
-      class="flex items-center justify-between gap-x-4 rounded-lg py-2.5 pl-5 pr-2.5 border border-foreground/10 shadow-foreground/50 shadow-xl/10 lg:grid lg:grid-cols-[1fr_auto_1fr] lg:justify-stretch lg:gap-x-12"
+      class="flex items-center justify-between gap-x-4 rounded-lg py-2.5 pl-5 pr-2.5 border border-foreground/3 shadow-foreground/50 shadow-xl/10 bg-foreground/10 lg:grid lg:grid-cols-[1fr_auto_1fr] lg:justify-stretch lg:gap-x-12"
     >
       <!-- Home/Logo -->
       <div class="flex items-center">
@@ -85,6 +86,8 @@ const endLinks = [
               <Icon name={link.icon}/>
             </Button>
           ))}
+
+          <ThemeToggle size="sm" />
 
           <!-- Mobile Menu Button -->
           <Button
