setup github pages action for base url /v2

--- a/src/components/blog-post-card.astro
+++ b/src/components/blog-post-card.astro
@@ -51,7 +51,7 @@ const { frontmatter, class: className, ...props } = Astro.props as Props;
     <p>{frontmatter.description}</p>
   </ItemDescription>
 
-  <Button variant="ghost" size="sm" href="/blog">
+  <Button variant="ghost" size="sm" href="/v2/blog">
     <Icon name="lucide:arrow-left" size={20} /> Back
   </Button>
 </Item>
