--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,37 +15,37 @@ import { loadInfoData } from "@/lib/data-loaders/info";
 const referLinks = [
   {
     description: "See my projects in detail.",
-    url: "/projects",
+    url: "/v2/projects",
     title: "Projects",
     icon: "lucide:rocket",
   },
   {
     description: "Learn more about my experience.",
-    url: "/",
+    url: "/v2/",
     title: "About",
     icon: "lucide:user",
   },
   {
     description: "See my resume.",
-    url: "/resume",
+    url: "/v2/resume",
     title: "Resume",
     icon: "lucide:scroll-text",
   },
   {
     description: "Read my blogs.",
-    url: "/blog",
+    url: "/v2/blog",
     title: "Blogs",
     icon: "lucide:newspaper",
   },
   {
     description: "See some of my friends.",
-    url: "/friends",
+    url: "/v2/friends",
     title: "Friends",
     icon: "lucide:user",
   },
   {
     description: "See my GitHub profile.",
-    url: "https://github.com/arv-anshul",
+    url: "/v2https://github.com/arv-anshul",
     title: "GitHub",
     icon: "simple-icons:github",
   },
