--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -12,7 +12,7 @@ const posts = await getCollection("blog");
     <h1 class="font-heading text-4xl font-bold mb-10">Latest Blog Posts</h1>
     <ItemGroup class="grid gap-6 md:grid-cols-2 lg:grid-cols-3">
       {posts.map((post) => (
-          <BlogListCard href={`/blog/${post.id}`} data={post.data} />
+          <BlogListCard href={`/v2/blog/${post.id}`} data={post.data} />
         ))}
     </ItemGroup>
   </main>
