fix og image url

--- a/src/pages/blog/[post].astro
+++ b/src/pages/blog/[post].astro
@@ -28,7 +28,7 @@ const { Content } = await render(post);
     basic: {
       title: post.data.title,
       type: "website",
-      image: new URL(`${post.id}/og.webp`, Astro.url).toString(),
+      image: new URL(`og.webp`, Astro.url).toString(),
       url: Astro.url,
     },
     article: {
