--- a/src/components/blog-list-card.astro
+++ b/src/components/blog-list-card.astro
@@ -36,7 +36,7 @@ const { data, class: className, ...props } = Astro.props as Props;
         {data.title}
       </ItemTitle>
       <p class="flex gap-3 text-xs text-muted-foreground">
-        <span class="flex gap-0.5">
+        <span class="flex gap-0.5" title="Published Date">
           <Icon name="lucide:calendar" size={15} />
           {data.date.toLocaleDateString("en-IN", {
             year: "numeric",
@@ -44,18 +44,20 @@ const { data, class: className, ...props } = Astro.props as Props;
             day: "2-digit",
           })}
         </span>
-        <span class="flex gap-0.5">
+        <span class="flex gap-0.5" title="Author">
           <Icon name="lucide:user-pen" size={15} />
           {data.author}
         </span>
       </p>
     </ItemContent>
     <ItemMedia>
-      <Icon name={data.icon} size={50} />
+      <Icon
+        name={data.icon}
+        title="Blog Icon"
+        class="h-15 w-15 md:h-18 md:w-18"
+      />
     </ItemMedia>
   </div>
 
-  <ItemDescription>
-    {data.description.length > 100 ? `${data.description.slice(0, 100)}...` : data.description}
-  </ItemDescription>
+  <ItemDescription>{data.description}</ItemDescription>
 </Item>
