--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -11,7 +11,7 @@ const posts = await getCollection("blog");
   <main class="flex-1 w-full max-w-350 mx-auto px-4 py-8">
     <h1 class="font-heading text-4xl font-bold mb-10">Latest Blog Posts</h1>
     <ItemGroup class="grid gap-6 md:grid-cols-2 lg:grid-cols-3">
-      {posts.map((post) => (
+      {posts.sort((a, b) => (b.data.date.getTime() - a.data.date.getTime())).map((post) => (
           <BlogListCard href={`/v2/blog/${post.id}`} data={post.data} />
         ))}
     </ItemGroup>
