--- a/src/pages/blog/[post].astro
+++ b/src/pages/blog/[post].astro
@@ -42,7 +42,7 @@ const { Content } = await render(post);
   >
     <BlogPostCard frontmatter={post.data} />
     <article class="mt-10 w-full md:max-w-11/12">
-      <Prose>
+      <Prose class="max-w-auto w-full">
         <Content />
       </Prose>
     </article>
