--- a/src/pages/blog/[post].astro
+++ b/src/pages/blog/[post].astro
@@ -4,6 +4,7 @@ import type { GetStaticPaths } from "astro";
 import BlogPostCard from "@/components/blog-post-card.astro";
 import Prose from "@/components/starwind/prose/Prose.astro";
 import BaseLayout from "@/layouts/base-layout.astro";
+import { getBlogSlugs } from "@/lib/blog-utils";
 
 interface Props {
   post: CollectionEntry<"blog">;
@@ -11,10 +12,13 @@ interface Props {
 
 export const getStaticPaths = (async () => {
   const posts = await getCollection("blog");
-  return posts.map((post) => ({
-    params: { post: post.id },
-    props: { post },
-  }));
+  return posts.map((post) => {
+    const slugs = getBlogSlugs(post.id);
+    return {
+      params: { post: slugs.pop() },
+      props: { post },
+    };
+  });
 }) satisfies GetStaticPaths;
 
 const { post } = Astro.props;
