--- a/src/pages/blog/[post].astro
+++ b/src/pages/blog/[post].astro
@@ -1,7 +1,7 @@
 ---
 import { type CollectionEntry, getCollection, render } from "astro:content";
 import type { GetStaticPaths } from "astro";
-import BlogPostCard from "@/components/blog-post-card.astro";
+import FrontmatterCard from "@/components/frontmatter-card.astro";
 import Prose from "@/components/starwind/prose/Prose.astro";
 import BaseLayout from "@/layouts/base-layout.astro";
 import { getBlogSlugs } from "@/lib/blog-utils";
@@ -44,7 +44,7 @@ const { Content } = await render(post);
   <div
     class="flex flex-col flex-1 mx-auto md:max-w-3/5 items-center justify-center px-4 py-8"
   >
-    <BlogPostCard frontmatter={post.data} />
+    <FrontmatterCard frontmatter={post.data} backPageUrl="/v2/blog" />
     <article class="mt-10 w-full md:max-w-11/12">
       <Prose class="max-w-auto w-full">
         <Content />
