add katex support in markdown

--- a/src/pages/blog/[post].astro
+++ b/src/pages/blog/[post].astro
@@ -8,6 +8,7 @@ import { getBlogSlugs } from "@/lib/blog-utils";
 import "remark-github-alerts/styles/github-base.css";
 import "remark-github-alerts/styles/github-colors-light.css";
 import "remark-github-alerts/styles/github-colors-dark-class.css";
+import "@/styles/katex.min.css";
 
 interface Props {
   post: CollectionEntry<"blog">;
