--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -13,6 +13,7 @@ import BaseLayout from "@/layouts/base-layout.astro";
 import "remark-github-alerts/styles/github-base.css";
 import "remark-github-alerts/styles/github-colors-light.css";
 import "remark-github-alerts/styles/github-colors-dark-class.css";
+import "@/styles/katex.min.css";
 
 interface Props {
   project: CollectionEntry<"projects">;
