--- a/src/components/frontmatter-card.astro
+++ b/src/components/frontmatter-card.astro
@@ -2,62 +2,98 @@
 import type { InferEntrySchema } from "astro:content";
 import type { HTMLAttributes } from "astro/types";
 import { Icon } from "astro-icon/components";
-import Button from "./starwind/button";
 import {
+  Item,
   ItemContent,
   ItemDescription,
   ItemMedia,
   ItemTitle,
-} from "./starwind/item";
-import Item from "./starwind/item/Item.astro";
+} from "@/components/starwind/item";
+import { cn } from "@/lib/utils";
 
-interface Props extends HTMLAttributes<"section"> {
-  frontmatter: InferEntrySchema<"blog" | "projects">;
-  backPageUrl?: string;
+interface BaseProps {
+  data: InferEntrySchema<"blog" | "projects">;
 }
 
+type SmallProps = BaseProps &
+  HTMLAttributes<"a"> & {
+    variant: "small";
+    backPageUrl?: never;
+  };
+
+type DefaultProps = BaseProps &
+  HTMLAttributes<"section"> & {
+    variant?: "default";
+    backPageUrl?: string;
+  };
+
+type Props = SmallProps | DefaultProps;
+
 const {
-  frontmatter,
+  data,
+  variant = "default",
   backPageUrl,
   class: className,
   ...props
 } = Astro.props as Props;
+
+const isSmall = variant === "small";
 ---
 
 <Item
-  as="section"
-  variant="muted"
-  class:list={["flex flex-col items-start w-full gap-2 border-muted", className]}
+  as={isSmall ? "a" : "section"}
+  variant={isSmall ? "outline" : "muted"}
+  class={cn(
+    "flex flex-col items-start gap-2",
+    !isSmall && "w-full border-muted",
+    className,
+  )}
   {...props}
 >
-  <div class="flex items-start justify-between w-full">
+  <div class:list={["flex justify-between w-full", !isSmall && "items-start"]}>
     <ItemContent class="flex flex-col gap-1">
-      <ItemTitle class="font-bold text-3xl">{frontmatter.title}</ItemTitle>
-      <p class="flex gap-3 text-muted-foreground text-xs">
-        <span class="flex gap-0.5">
+      <ItemTitle
+        class:list={["font-heading font-bold", isSmall ? "text-xl" : "text-4xl"]}
+      >
+        {data.title}
+      </ItemTitle>
+      <p class="flex gap-3 text-xs text-muted-foreground">
+        <span class="flex gap-0.5" title="Published Date">
           <Icon name="lucide:calendar" size={15} />
-          {frontmatter.pubDate.toLocaleDateString("en-IN", {
+          {data.pubDate.toLocaleDateString("en-IN", {
             year: "numeric",
             month: "short",
             day: "2-digit",
           })}
         </span>
-        <span class="flex gap-0.5">
+        <span class="flex gap-0.5" title="Author">
           <Icon name="lucide:user-pen" size={15} />
-          {frontmatter.author}
+          {data.author}
         </span>
       </p>
     </ItemContent>
     <ItemMedia>
-      <Icon name={frontmatter.icon} size={60} />
+      <Icon
+        name={data.icon}
+        title={`Blog Icon: ${data.icon}`}
+        class={isSmall ? "size-12" : "size-18"}
+      />
     </ItemMedia>
   </div>
 
-  <ItemDescription>
-    <p>{frontmatter.description}</p>
-  </ItemDescription>
+  <ItemDescription>{data.description}</ItemDescription>
 
-  {backPageUrl && <Button variant="ghost" size="sm" href={backPageUrl}>
-    <Icon name="lucide:arrow-left" size={20} /> Back
-  </Button>}
+  {!isSmall && backPageUrl && (
+      <a
+        href={backPageUrl}
+        class="group flex items-center gap-0.5 text-sm font-medium transition-colors hover:text-muted-foreground"
+      >
+        <Icon
+          name="lucide:arrow-left"
+          size={18}
+          class="transition-transform duration-300 group-hover:-translate-x-0.5"
+        />
+        <span>Back</span>
+      </a>
+    )}
 </Item>
