--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from "astro:content";
-import BlogListCard from "@/components/blog-list-card.astro";
+import FrontmatterCard from "@/components/frontmatter-card.astro";
 import { ItemGroup } from "@/components/starwind/item";
 import BaseLayout from "@/layouts/base-layout.astro";
 import { getBlogSlugs } from "@/lib/blog-utils";
@@ -13,7 +13,7 @@ const posts = await getCollection("blog");
     <h1 class="font-heading text-4xl font-bold mb-10">Latest Blog Posts</h1>
     <ItemGroup class="grid gap-6 md:grid-cols-2 lg:grid-cols-3">
       {posts.sort((a, b) => (b.data.pubDate.getTime() - a.data.pubDate.getTime())).map((post) => (
-          <BlogListCard href={`/v2/blog/${getBlogSlugs(post.id).pop()}`} data={post.data} />
+          <FrontmatterCard variant="small" href={`/v2/blog/${getBlogSlugs(post.id).pop()}`} data={post.data} />
         ))}
     </ItemGroup>
   </main>
