--- a/src/pages/blog/[post].astro
+++ b/src/pages/blog/[post].astro
@@ -9,6 +9,7 @@ import "remark-github-alerts/styles/github-base.css";
 import "remark-github-alerts/styles/github-colors-light.css";
 import "remark-github-alerts/styles/github-colors-dark-class.css";
 import "@/styles/katex.min.css";
+import "@/styles/custom-prose.css";
 
 interface Props {
   post: CollectionEntry<"blog">;
@@ -50,7 +51,7 @@ const { Content } = await render(post);
   >
     <FrontmatterCard data={post.data} backPageUrl="/v2/blog" />
     <article class="mt-10 w-full md:max-w-11/12">
-      <Prose class="max-w-auto w-full">
+      <Prose class="max-w-auto w-full custom-prose">
         <Content />
       </Prose>
     </article>
