--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -14,6 +14,7 @@ import "remark-github-alerts/styles/github-base.css";
 import "remark-github-alerts/styles/github-colors-light.css";
 import "remark-github-alerts/styles/github-colors-dark-class.css";
 import "@/styles/katex.min.css";
+import "@/styles/custom-prose.css";
 
 interface Props {
   project: CollectionEntry<"projects">;
@@ -62,7 +63,7 @@ const { Content } = await render(project);
     </div>}
 
     <article class="mt-10 w-full md:max-w-11/12">
-      <Prose class="max-w-auto w-full">
+      <Prose class="max-w-auto w-full custom-prose">
         <Content />
       </Prose>
     </article>
