--- a/src/components/frontmatter-card.astro
+++ b/src/components/frontmatter-card.astro
@@ -77,8 +77,8 @@ const isSmall = variant === "small";
         name={data.icon}
         title={`Blog Icon: ${data.icon}`}
         class:list={[
-          "bg-muted rounded p-2",
-          isSmall ? "size-15" : "size-18"]}
+          "rounded p-2",
+          isSmall ? "bg-muted size-15" : "size-18"]}
       />
     </ItemMedia>
   </div>
