--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const referLinks = [
     description: "See some of my friends.",
     url: "/v2/friends",
     title: "Friends",
-    icon: "lucide:user",
+    icon: "lucide:users",
   },
   {
     description: "Visit my LinkedIn profile.",
