--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -8,7 +8,7 @@ const { projects } = await loadProjectsData();
 
 <BaseLayout
   title="Projects - ARV"
-  description="See all the project created by Anshul Raj Verma"
+  description="See all the project created by ARV."
 >
   <main class="flex-1 w-full md:w-2/3 mx-auto px-4 pb-8">
     <h1 class="font-bold font-heading text-3xl md:text-center mb-8">
