--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -60,12 +60,12 @@
   --color-input: var(--input);
   --color-outline: var(--outline);
 
-  --radius-xs: calc(var(--radius) - 0.7rem);
-  --radius-sm: calc(var(--radius) - 0.5rem);
-  --radius-md: calc(var(--radius) - 0.25rem);
-  --radius-lg: var(--radius);
-  --radius-xl: calc(var(--radius) + 0.05rem);
-  --radius-2xl: calc(var(--radius) + 0.25rem);
+  --radius-xs: calc(var(--radius) - 0.3rem);
+  --radius-sm: calc(var(--radius) - 0.175rem);
+  --radius-md: var(--radius);
+  --radius-lg: calc(var(--radius) + 0.125rem);
+  --radius-xl: calc(var(--radius) + 0.25rem);
+  --radius-2xl: calc(var(--radius) + 0.375rem);
   --radius-3xl: calc(var(--radius) + 0.5rem);
 
   --font-heading: var(--font-heading);
@@ -82,86 +82,86 @@
 }
 
 :root {
-  --background: var(--color-white);
-  --foreground: var(--color-neutral-950);
-  --card: var(--color-white);
-  --card-foreground: var(--color-neutral-950);
-  --popover: var(--color-white);
-  --popover-foreground: var(--color-neutral-950);
-  --primary: var(--color-blue-700);
-  --primary-foreground: var(--color-neutral-50);
-  --primary-accent: var(--color-blue-700);
-  --secondary: var(--color-fuchsia-700);
-  --secondary-foreground: var(--color-neutral-50);
-  --secondary-accent: var(--color-fuchsia-700);
-  --muted: var(--color-neutral-100);
-  --muted-foreground: var(--color-neutral-600);
-  --accent: var(--color-neutral-100);
-  --accent-foreground: var(--color-neutral-900);
-  --info: var(--color-sky-300);
+  --background: var(--color-zinc-50);
+  --foreground: var(--color-zinc-900);
+  --card: var(--color-zinc-50);
+  --card-foreground: var(--color-zinc-900);
+  --popover: var(--color-zinc-50);
+  --popover-foreground: var(--color-zinc-900);
+  --primary: var(--color-cyan-600);
+  --primary-foreground: var(--color-zinc-50);
+  --primary-accent: var(--color-cyan-500);
+  --secondary: var(--color-violet-500);
+  --secondary-foreground: var(--color-zinc-50);
+  --secondary-accent: var(--color-violet-400);
+  --muted: var(--color-zinc-100);
+  --muted-foreground: var(--color-zinc-500);
+  --accent: var(--color-zinc-100);
+  --accent-foreground: var(--color-zinc-800);
+  --info: var(--color-sky-400);
   --info-foreground: var(--color-sky-950);
-  --success: var(--color-green-300);
-  --success-foreground: var(--color-green-950);
-  --warning: var(--color-amber-300);
+  --success: var(--color-emerald-400);
+  --success-foreground: var(--color-emerald-950);
+  --warning: var(--color-amber-400);
   --warning-foreground: var(--color-amber-950);
-  --error: var(--color-red-700);
-  --error-foreground: var(--color-neutral-50);
-  --border: var(--color-neutral-200);
-  --input: var(--color-neutral-200);
-  --outline: var(--color-neutral-400);
-  --radius: 0.5rem;
+  --error: var(--color-rose-400);
+  --error-foreground: var(--color-rose-950);
+  --border: var(--color-zinc-200);
+  --input: var(--color-zinc-200);
+  --outline: var(--color-zinc-400);
+  --radius: 0.375rem;
   --font-heading: "Inter Variable", var(--font-sans);
   --font-mono: "Geist Mono Variable", monospace;
 
   /* sidebar variables */
-  --sidebar-background: var(--color-neutral-50);
-  --sidebar-foreground: var(--color-neutral-950);
-  --sidebar-primary: var(--color-blue-700);
-  --sidebar-primary-foreground: var(--color-neutral-50);
-  --sidebar-accent: var(--color-neutral-100);
-  --sidebar-accent-foreground: var(--color-neutral-900);
-  --sidebar-border: var(--color-neutral-200);
-  --sidebar-outline: var(--color-neutral-400);
+  --sidebar-background: var(--color-zinc-50);
+  --sidebar-foreground: var(--color-zinc-900);
+  --sidebar-primary: var(--color-cyan-600);
+  --sidebar-primary-foreground: var(--color-zinc-50);
+  --sidebar-accent: var(--color-zinc-100);
+  --sidebar-accent-foreground: var(--color-zinc-800);
+  --sidebar-border: var(--color-zinc-200);
+  --sidebar-outline: var(--color-zinc-400);
 }
 
 .dark {
-  --background: var(--color-neutral-950);
-  --foreground: var(--color-neutral-50);
-  --card: var(--color-neutral-900);
-  --card-foreground: var(--color-neutral-50);
-  --popover: var(--color-neutral-800);
-  --popover-foreground: var(--color-neutral-50);
-  --primary: var(--color-blue-700);
-  --primary-foreground: var(--color-neutral-50);
-  --primary-accent: var(--color-blue-400);
-  --secondary: var(--color-fuchsia-700);
-  --secondary-foreground: var(--color-neutral-50);
-  --secondary-accent: var(--color-fuchsia-400);
-  --muted: var(--color-neutral-800);
-  --muted-foreground: var(--color-neutral-400);
-  --accent: var(--color-neutral-700);
-  --accent-foreground: var(--color-neutral-100);
+  --background: var(--color-zinc-950);
+  --foreground: var(--color-zinc-100);
+  --card: var(--color-zinc-900);
+  --card-foreground: var(--color-zinc-100);
+  --popover: var(--color-zinc-800);
+  --popover-foreground: var(--color-zinc-100);
+  --primary: var(--color-cyan-400);
+  --primary-foreground: var(--color-zinc-950);
+  --primary-accent: var(--color-cyan-300);
+  --secondary: var(--color-violet-400);
+  --secondary-foreground: var(--color-zinc-950);
+  --secondary-accent: var(--color-violet-300);
+  --muted: var(--color-zinc-800);
+  --muted-foreground: var(--color-zinc-400);
+  --accent: var(--color-zinc-800);
+  --accent-foreground: var(--color-zinc-200);
   --info: var(--color-sky-300);
   --info-foreground: var(--color-sky-950);
-  --success: var(--color-green-300);
-  --success-foreground: var(--color-green-950);
+  --success: var(--color-emerald-300);
+  --success-foreground: var(--color-emerald-950);
   --warning: var(--color-amber-300);
   --warning-foreground: var(--color-amber-950);
-  --error: var(--color-red-800);
-  --error-foreground: var(--color-neutral-50);
-  --border: --alpha(var(--color-neutral-50) / 10%);
-  --input: --alpha(var(--color-neutral-50) / 15%);
-  --outline: var(--color-neutral-500);
+  --error: var(--color-rose-400);
+  --error-foreground: var(--color-rose-950);
+  --border: --alpha(var(--color-zinc-100) / 10%);
+  --input: --alpha(var(--color-zinc-100) / 15%);
+  --outline: var(--color-zinc-500);
 
-  /* sidebars variables */
-  --sidebar-background: var(--color-neutral-900);
-  --sidebar-foreground: var(--color-neutral-50);
-  --sidebar-primary: var(--color-blue-700);
-  --sidebar-primary-foreground: var(--color-neutral-50);
-  --sidebar-accent: var(--color-neutral-800);
-  --sidebar-accent-foreground: var(--color-neutral-100);
-  --sidebar-border: var(--color-neutral-800);
-  --sidebar-outline: var(--color-neutral-600);
+  /* sidebar variables */
+  --sidebar-background: var(--color-zinc-900);
+  --sidebar-foreground: var(--color-zinc-100);
+  --sidebar-primary: var(--color-cyan-400);
+  --sidebar-primary-foreground: var(--color-zinc-950);
+  --sidebar-accent: var(--color-zinc-800);
+  --sidebar-accent-foreground: var(--color-zinc-200);
+  --sidebar-border: var(--color-zinc-800);
+  --sidebar-outline: var(--color-zinc-500);
 }
 
 @layer base {
